--- a/index.html
+++ b/index.html
@@ -61,8 +61,18 @@
       color: #777;
     }
   </style>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-52658HZH');</script>
+<!-- End Google Tag Manager -->
 </head>
 <body>
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-52658HZH"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+
   <header>
     <div class="logo">🎯</div>
     <h1>Bekjan</h1>
